Changed privacy styling

--- a/datenschutz.html
+++ b/datenschutz.html
@@ -2,11 +2,12 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet">
     <title>Datenschutzerklärung für iOS App "myQRcode"</title>
 </head>
 <body>
-    <section>
+    <section id="content">
         <div class="container">
             <h1>Datenschutzerklärung für iOS App "myQRcode"</h1>
             <p>Vielen Dank, dass Sie unsere iOS App "myQRcode" nutzen. Diese Datenschutzerklärung soll Ihnen einen Überblick darüber geben, wie wir Ihre personenbezogenen Daten erfassen, verwenden und schützen, während Sie unsere App verwenden. Wir nehmen den Schutz Ihrer Daten ernst und setzen alle notwendigen Maßnahmen ein, um Ihre Privatsphäre zu wahren.</p>
