--- a/privacy.html
+++ b/privacy.html
@@ -2,11 +2,12 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet">
     <title>Privacy Policy for iOS App "myQRcode"</title>
 </head>
 <body>
-    <section>
+    <section id="content">
         <div class="container">
             <h1>Privacy Policy for iOS App "myQRcode"</h1>
             <p>Thank you for using our iOS App "myQRcode". This privacy policy is intended to give you an overview of how we collect, use, and protect your personal data while you use our app. We take the protection of your data seriously and implement all necessary measures to safeguard your privacy.</p>
