Added index to website

--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
-<h1>Never gonna give you up!</h1>
+<!DOCTYPE html>
+<html lang="de">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="apple-itunes-app" content="app-id=1444531883">
+    <title>myQRcode</title>
+    <link href="css/style.css" rel="stylesheet">
+</head>
+<body class="bg">
+    <div class="wrapper">
+    <section id="hero">
+        <div class="container">
+            <img src="img/appicon.jpg" class="appIcon" alt="App Icon of myQRcode">
+            <h1>myQRcode</h1>
+            <p>QR-Code Generator & Scanner</p>
+            <a href="https://apps.apple.com/app/myqrcode/id1444531883" target="_blank">
+                <img src="img/appstore.svg" alt="Download on App Store Button" width="200">
+            </a>
+        </div>
+    </section>
+
+    <footer>
+        <p>
+            <a href="https://marc-hein.de/impressum">Impressum</a>
+            <a href="/datenschutz">Datenschutzerklärung</a>
+            <a href="/privacy">Privacy Notice</a>
+        </p>
+        <p>&copy; 2023 Marc Hein</p>
+    </footer>
+</div>
+</body>
+</html>
