Updated website for new name using new icon

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="apple-itunes-app" content="app-id=1444531883">
-    <title>myQRcode</title>
+    <title>myBarcode</title>
     <link href="css/style.css" rel="stylesheet">
     <!-- Matomo -->
     <script>
@@ -28,10 +28,10 @@
     <div class="wrapper">
     <section id="hero">
         <div class="container">
-            <img src="img/appicon.jpg" class="appIcon" alt="App Icon of myQRcode">
-            <h1>myQRcode</h1>
-            <p>QR-Code Generator & Scanner</p>
-            <a href="https://apps.apple.com/app/myqrcode/id1444531883" target="_blank">
+            <img src="img/appicon.png" class="appIcon" alt="App Icon of myBarcode">
+            <h1>myBarcode</h1>
+            <p>Barcode Generator & Scanner</p>
+            <a href="https://apps.apple.com/app/myBarcode/id1444531883" target="_blank">
                 <img src="img/appstore.svg" alt="Download on App Store Button" width="200">
             </a>
         </div>
